--- a/main.css
+++ b/main.css
@@ -1,12 +1,12 @@
 li{list-style:none;}
 a{color:black;font-weight:bold;}
-#headline{padding-top:150px;}
-.menu li a{font-size:20px;font-family:'Maven Pro', sans-serif;color:black;text-decoration:none;}
+.menu li a{font-size:20px;font-family:'Arial', sans-serif;color:black;text-decoration:none;}
 .menu li a:hover{color:gray;}
+.menu{padding-top: 100px; font-family:'Arial' }
 .menu li{padding-top:10px;}
 .title{font-size:45px;font-family:'Maven Pro', sans-serif;}
 .sub-header{font-size:25px;font-family:'Maven Pro', sans-serif;}
-#menus{padding-top:100px;position:fixed;z-index:1000}
+#menus{margin-top:-60px;position:fixed;z-index:1000; background-color:gray;padding-left:60px; margin-left:-59px; padding-right:50px; height: 110%}
 .navigation{width:100%;height:100%;position:fixed;top:0;right:0;bottom:0;left:0;z-index:0;list-style:none;background:#111;}
 .nav-item{width:200px;border-top:1px solid #111;border-bottom:1px solid #000;}
 .nav-item a{display:block;padding:1em;background:black;color:white;font-size:1.2em;text-decoration:none;}
@@ -32,10 +32,13 @@ html, body{height:100%;width:100%;font-family:Helvetica, Arial, sans-serif;}
 #menus{display:none}
 .col-lg-4 img{display:none;}
 .cover{width:100%;}
+#book-image{padding-top:15px}
 }
 @media only screen and (min-width:851px){.navigation{display:none;}
 .nav-item{display:none;}
 .nav-trigger{display:none;}
 label[for="nav-trigger"]{display:none;}
-.menu-div{padding-left:200px;}
+.container{margin-left:300px}
+#book-image{margin-top:-250px}
+.full-size-title{display:none;}
 }
