--- a/main.css
+++ b/main.css
@@ -6,12 +6,12 @@ a{color:black;font-weight:bold;}
 .menu li{padding-top:10px;}
 .title{font-size:45px;font-family:'Maven Pro', sans-serif;}
 .sub-header{font-size:25px;font-family:'Maven Pro', sans-serif;}
-#menus{margin-top:-60px;position:fixed;z-index:1000; background-color:gray;padding-left:60px; margin-left:-59px; padding-right:50px; height: 110%}
+#menus{margin-top:-60px;position:fixed;z-index:1000;padding-left:60px; margin-left:-59px; padding-right:50px; height: 110%}
 .navigation{width:100%;height:100%;position:fixed;top:0;right:0;bottom:0;left:0;z-index:0;list-style:none;background:#111;}
 .nav-item{width:200px;border-top:1px solid #111;border-bottom:1px solid #000;}
 .nav-item a{display:block;padding:1em;background:black;color:white;font-size:1.2em;text-decoration:none;}
 .nav-item a:hover{background:darkslategray}
-.site-wrap{min-height:100%;min-width:100%;background-color:white;position:relative;top:0;bottom:100%;left:0;z-index:1;padding:4em;background-image:linear-gradient(135deg, rgb(254,255,255) 0%,rgb(221,241,249) 35%,rgb(160,216,239) 100%);background-size:200%;}
+.site-wrap{min-height:100%;min-width:100%;background-color:white;position:relative;top:0;bottom:100%;left:0;z-index:1;padding:4em;background-image:url('files/tree_bark.png')}
 .nav-trigger{position:absolute;clip:rect(0, 0, 0, 0);}
 label[for="nav-trigger"]{position:fixed;left:15px;top:15px;z-index:2;height:30px;width:30px;cursor:pointer;background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' width='30px' height='30px' viewBox='0 0 30 30' enable-background='new 0 0 30 30' xml:space='preserve'><rect width='30' height='6'/><rect y='24' width='30' height='6'/><rect y='12' width='30' height='6'/></svg>");background-size:contain;}
 .nav-trigger + label, .site-wrap{transition:left 0.2s;}
@@ -22,7 +22,7 @@ h1, h3, p{max-width:100%;margin:0 auto 1em;}
 code{padding:2px;background:#ddd;}
 *,*:before,*:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;margin:0;padding:0;}
 html, body{height:100%;width:100%;font-family:Helvetica, Arial, sans-serif;}
-.bio{padding-top:50px}
+.bio{padding-top:40px}
 .book_underline{text-decoration:underline;}
 @media only screen and (max-width:750px){#headline{padding-top:0px;}
 .title{font-size:25px;padding-top:0px}
@@ -38,7 +38,7 @@ html, body{height:100%;width:100%;font-family:Helvetica, Arial, sans-serif;}
 .nav-item{display:none;}
 .nav-trigger{display:none;}
 label[for="nav-trigger"]{display:none;}
-.container{margin-left:300px}
+.container{margin-left:250px; width:80%}
 #book-image{margin-top:-250px}
 .full-size-title{display:none;}
 }
